test/zinc_source/compile_errors/tuples/01_index_out_of_bounds.zn
// expected-error: tuple index out of bounds

fn main() {
    pair = (1, 2)
    bad = pair[2]
}
